# mobiman

./: .gitignore  CMakeLists.txt  MANUAL_INSTALLATION  README.md  TODO.md  ex_mobiman.sh  execute_robot.sh  install_mobiman.sh  mobiman_install.sh  ocs2_instructions  package.xml  set_jackal_jaco.sh
config/: base_local_planner_params.yaml  global_costmap_params_nomap.yaml  test.yaml
config/moveit_config/: kinematics.yaml  ompl_planning.yaml  stretch_description.srdf
jackal_ur5_holonomic_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jackal_ur5_holonomic_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ompl_planning_tmp.yaml  ros_controllers.yaml  stomp_planning.yaml
jackal_ur5_holonomic_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
launch/: map_server.launch  move_base.launch  move_group.launch  moveit_demo.launch  navigation_gazebo.launch  navigation_no_map.launch  navigation_with_map.launch  stretch_driver.launch  test.launch
launch/moveit_config/: moveit.rviz  planning_context.launch
mobiman_control/: CMakeLists.txt  package.xml
mobiman_control/launch/: control_jackal_jaco.launch  control_jackal_ur5.launch  mobiman_control.launch
mobiman_isaac/: CMakeLists.txt  package.xml
mobiman_isaac/isaac_files/: jackal_ur5.usd  jackal_ur5_conveyor.usd  move_jackal.py
mobiman_isaac/main_convert/: main_convert.usd
mobiman_isaac/scenes/: jackal_ur5.usd
mobiman_isaac/scripts/: ur5_check_bridge.py
mobiman_simulation/: .gitignore  CMakeLists.txt  Instructions_for_tag_localization  README.md  input_data.csv  package.xml  sampling_data.csv  setup.py
mobiman_simulation/config/: apriltags.yaml  base_local_planner_params.yaml  common_costmap_params.yaml  config_distance_server.yaml  config_goal_server.yaml  config_map_server.yaml  config_map_server_exp.yaml  config_map_server_gazebo.yaml  config_map_server_igibson.yaml  config_map_utility_jackal_ur5.yaml  config_map_utility_scanner.yaml  config_mobiman_framework.yaml  config_mobiman_framework_exp.yaml  config_mobiman_framework_gazebo.yaml  config_mobiman_framework_igibson.yaml  config_mobiman_framework_igibson_debug_mpc.yaml  config_mobiman_framework_igibson_debug_mrt.yaml  config_mobiman_framework_single.yaml  config_mobiman_plot_oar.yaml  config_pedsim.xml  config_scan_utility.yaml  (+17 more)
mobiman_stretch_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
scripts/: moveit.py
src/: move_group_interface.cpp  moveit_demo.cpp
(+492 files in other folders)
